registration fix
