# application/domain/src/main/java/sk/posam/fsa/skill_market/domain/registration/CreateIdentityUserCommand.java
@@ -1,0 +1,12 @@
+package sk.posam.fsa.skill_market.domain.registration;
+
+import sk.posam.fsa.skill_market.domain.profile.UserRole;
+
+public record CreateIdentityUserCommand(
+        String email,
+        String password,
+        String firstName,
+        String lastName,
+        UserRole role
+) {
+}
